--- a/src/ANN/ANN.csproj
+++ b/src/ANN/ANN.csproj
@@ -40,7 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MLP.cs" />
+    <Compile Include="NeuralNetwork.cs" />
+    <Compile Include="NeuronLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMLP.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
